# tools

./: .personal.gitconfig  .zshrc  README.md  cheatcodes.txt  windowsController.txt  zshPlaybook.yaml
makefileTemplate/: Makefile  pyproject.toml  requirements-dev.txt  requirements.txt
