[project]
name = "changeMe"
requires-python = ">=3.10"
version = "0.1.0"

dependencies = [
    "pygame",
]

[project.optional-dependencies]
dev = [
    "black",
    "pytest",
    "pip-tools",
]

[tool.setuptools]
py-modules = []

[build-system]
requires = [
    "setuptools~=69.0.3",
    "wheel",
]
build-backend = "setuptools.build_meta"
